Adapt exact RenderLayer descriptor to Java 17